// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeUndefined should return false for  (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: string
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for 1 (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: number
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for Symbol() (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: symbol
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for any (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: any
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for false (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: boolean
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for null (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: null
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for true (isNot false) 1`] = `
Object {
  "message": "    
    expected should not be an undefined.
    got: boolean
",
  "pass": false,
}
`;

exports[`testing toBeUndefined should return false for undefined (isNot true) 1`] = `
Object {
  "message": "    
    expected should be an undefined.
    got: undefined
",
  "pass": false,
}
`;
